Fixed index page text alignment

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -232,11 +232,14 @@ ul {
 }
 
 .index-nav {
-  display: grid;
-  height: 100%;
+  display: flex;
+  height: 20vw;
   max-height: 250px;
   max-width: 1000px;
+  min-height: 30px;
+  min-width: 120px;
   text-align: center;
+  text-decoration: none;
   width: 100%;
 }
 
@@ -254,10 +257,13 @@ ul {
 }
 
 .index-nav-text {
+  display: flex;
   font-family: 'broken_15regular',
     Helvetica;
   font-size: clamp(.4rem, 6vw, 10rem);
-  line-height: 10vw;
+  justify-content: center;
+  line-height: clamp(30px, 20vw, 250px);
+  margin: 0 auto;
   text-align: center;
   vertical-align: middle;
 }
